Thu Apr 28 04:49:07 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* configure.in (rb_cv_lgamma_r_pm0): check if lgamma_r(+0.0)
	  returns positive infinity, in addition to lgamma_r(-0.0).
	  AIX returns an incorrect result of negative infinity.

	* math.c (ruby_lgamma_r): handle +0.0, in addition to -0.0.

Thu Apr 28 01:11:14 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c: define _DEFAULT_SOURCE because glibc 2.20 depracates
	  _BSD_SOURCE.
	  https://sourceware.org/glibc/wiki/Release/2.20

Thu Apr 28 00:27:55 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_xor): {Fixnum,Bignum}#^ is unified into
	  Integer.

	* bignum.c (rb_big_xor): Don't define Bignum#^.

Wed Apr 27 20:53:59 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_aref): {Fixnum,Bignum}#[] is unified into
	  Integer.

	* bignum.c (rb_big_aref): Don't define Bignum#<<.

	* internal.h (rb_big_aref): Declared.

Wed Apr 27 16:10:35 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/instruction.rb: fix to follow current implementation.

Wed Apr 27 15:47:54 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_s_new): warn if a block is given,
	  as well as IO.new.

Wed Apr 27 14:29:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (ruby_only_for_internal_use): raise fatal error when
	  deprecated function only for internal use is called, not just a
	  warning.

Tue Apr 26 23:42:30 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (rel): should not raise exceptions even if
	  the user input is wrong.  only reports the error and continue process.

Tue Apr 26 23:35:23 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): convert -e script to the encoding
	  given by a command line option on Windows.  assume it is the
	  expected encoding.  [ruby-dev:49461] [Bug #11900]

Tue Apr 26 21:11:02 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_lshift): {Fixnum,Bignum}#<< is unified into
	  Integer.
