@@ -170,6 +170,7 @@ module Gem
     # An English description of the error.
 
     def wordy
+      @source.uri.password = 'REDACTED' unless @source.uri.password.nil?
       "Unable to download data from #{@source.uri} - #{@error.message}"
     end
 
